Fix Logo Position Iphone 12-13-14

--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #292b2c;
+  background-color: #212529;
 }
 
 code {
